tests/transpiler/x/cpp/fun_expr_in_let.error
compile: exit status 1
/workspace/mochi/tests/transpiler/x/cpp/fun_expr_in_let.cpp:8:16: error: non-local lambda expression cannot have a capture-default
    8 | auto square = [=](int x) { return (x * x); };
      |                ^
