tests/transpiler/x/cpp/fun_expr_in_let.cpp
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:19:53 GMT+7
#include <iostream>
#include <string>
#include <sstream>
#include <iomanip>


auto square = [=](int x) { return (x * x); };

int main() {
    std::cout << std::boolalpha << square(6) << std::endl;
    return 0;
}
